--- a/ObjectOrientedCalculator.csproj
+++ b/ObjectOrientedCalculator.csproj
@@ -54,10 +54,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IOneArgumentCalculator.cs" />
     <Compile Include="ITwoArgumentsCalculator.cs" />
     <Compile Include="MultiplyCalculator.cs" />
+    <Compile Include="OneArgumentFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinusCalculator.cs" />
     <Compile Include="SubtractionCalculator.cs" />
     <Compile Include="TwoArgumentsFactory.cs" />
     <EmbeddedResource Include="Form1.resx">
