--- a/ObjectOrientedCalculator.csproj
+++ b/ObjectOrientedCalculator.csproj
@@ -46,24 +46,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdditionCalculator.cs" />
-    <Compile Include="CosinusCalculator.cs" />
-    <Compile Include="DivisionCalculator.cs" />
+    <Compile Include="TwoArgumentsFunctions\AdditionCalculator.cs" />
+    <Compile Include="OneArgumentsFunctions\CosinusCalculator.cs" />
+    <Compile Include="TwoArgumentsFunctions\DivisionCalculator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IOneArgumentCalculator.cs" />
-    <Compile Include="ITwoArgumentsCalculator.cs" />
-    <Compile Include="MultiplyCalculator.cs" />
-    <Compile Include="OneArgumentFactory.cs" />
+    <Compile Include="OneArgumentsFunctions\IOneArgumentCalculator.cs" />
+    <Compile Include="TwoArgumentsFunctions\ITwoArgumentsCalculator.cs" />
+    <Compile Include="TwoArgumentsFunctions\MultiplyCalculator.cs" />
+    <Compile Include="OneArgumentsFunctions\OneArgumentFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SinusCalculator.cs" />
-    <Compile Include="SubtractionCalculator.cs" />
-    <Compile Include="TwoArgumentsFactory.cs" />
+    <Compile Include="OneArgumentsFunctions\SinusCalculator.cs" />
+    <Compile Include="TwoArgumentsFunctions\SubtractionCalculator.cs" />
+    <Compile Include="TwoArgumentsFunctions\TwoArgumentsFactory.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
