--- a/ObjectOrientedCalculator.csproj
+++ b/ObjectOrientedCalculator.csproj
@@ -70,6 +70,7 @@
     <Compile Include="TwoArgumentsFunctions\ITwoArgumentsCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\LogXYCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\MinXYCalculator.cs" />
+    <Compile Include="TwoArgumentsFunctions\ModCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\MultiplyCalculator.cs" />
     <Compile Include="OneArgumentsFunctions\OneArgumentFactory.cs" />
     <Compile Include="Program.cs" />
