--- a/ObjectOrientedCalculator.csproj
+++ b/ObjectOrientedCalculator.csproj
@@ -69,21 +69,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="OneArgumentsFunctions\IOneArgumentCalculator.cs" />
+    <Compile Include="Interfaces\IOneArgumentCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\GeometricCalculator.cs" />
-    <Compile Include="TwoArgumentsFunctions\ITwoArgumentsCalculator.cs" />
+    <Compile Include="Interfaces\ITwoArgumentsCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\LogXYCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\MaxXYCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\MinXYCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\ModCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\MultiplyCalculator.cs" />
-    <Compile Include="OneArgumentsFunctions\OneArgumentFactory.cs" />
+    <Compile Include="Factories\OneArgumentFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OneArgumentsFunctions\SinusCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\PowXYCalculator.cs" />
     <Compile Include="TwoArgumentsFunctions\SubtractionCalculator.cs" />
-    <Compile Include="TwoArgumentsFunctions\TwoArgumentsFactory.cs" />
+    <Compile Include="Factories\TwoArgumentsFactory.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
