--- a/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
+++ b/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="TwoArgumentsFunctions\AdditionCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoArgumentsFunctions\DivisionCalculatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObjectOrientedCalculator.csproj">
