--- a/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
+++ b/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="TwoArgumentsFunctions\AdditionCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwoArgumentsFunctions\DivisionCalculatorTests.cs" />
+    <Compile Include="TwoArgumentsFunctions\MultiplyCalculatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObjectOrientedCalculator.csproj">
