--- a/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
+++ b/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
@@ -56,6 +56,9 @@
     <Compile Include="OneArgumentsFunctions\TanCalculatorTestCase.cs" />
     <Compile Include="TwoArgumentsFunctions\AdditionCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoArgumentsFunctions\LogXYCalculatorTestCase.cs" />
+    <Compile Include="TwoArgumentsFunctions\MinXYCalculatorTestCase.cs" />
+    <Compile Include="TwoArgumentsFunctions\PowXYCalculatorTestCase.cs" />
     <Compile Include="TwoArgumentsFunctions\AverageCalculatorTestCase.cs" />
     <Compile Include="TwoArgumentsFunctions\DivCalculatorTestCase.cs" />
     <Compile Include="TwoArgumentsFunctions\DivisionCalculatorTests.cs" />
@@ -64,6 +67,7 @@
     <Compile Include="TwoArgumentsFunctions\ModCalculatorTestCase.cs" />
     <Compile Include="TwoArgumentsFunctions\MultiplyCalculatorTests.cs" />
     <Compile Include="TwoArgumentsFunctions\SubtractionCalculatorTests.cs" />
+    <Compile Include="OneArgumentsFunctions\Xpow2CalculatorTestCase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObjectOrientedCalculator.csproj">
