--- a/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
+++ b/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
@@ -47,13 +47,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OneArgumentsFunctions\MinusXCalculatorTestCase.cs" />
+    <Compile Include="OneArgumentsFunctions\LnXCalculatorTestCase.cs" />
+    <Compile Include="OneArgumentsFunctions\DegXCalculatorTestCase.cs" />
+    <Compile Include="OneArgumentsFunctions\RadXCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\ArccosCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\ArcsinCalculatorTestCase.cs" />
+    <Compile Include="OneArgumentsFunctions\AbsXCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\ArctanCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\CtanCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\SinusCalculatorTests.cs" />
     <Compile Include="OneArgumentsFunctions\CosinusCalculatorTests.cs" />
     <Compile Include="OneArgumentsFunctions\TanCalculatorTestCase.cs" />
+    <Compile Include="OneArgumentsFunctions\OnedivXCalculatorTestCase.cs" />
     <Compile Include="TwoArgumentsFunctions\AdditionCalculatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwoArgumentsFunctions\LogXYCalculatorTestCase.cs" />
