--- a/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
+++ b/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\OneArgumentFactoryTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\MinusXCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\LnXCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\DegXCalculatorTestCase.cs" />
