--- a/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
+++ b/ObjectOrientedCalculator.Tests/ObjectOrientedCalculator.Tests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Factories\TwoArgumentsFactoryTestCase.cs" />
     <Compile Include="Factories\OneArgumentFactoryTestCase.cs" />
+    <Compile Include="OneArgumentExtentionTests.cs" />
     <Compile Include="OneArgumentsFunctions\MinusXCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\LnXCalculatorTestCase.cs" />
     <Compile Include="OneArgumentsFunctions\DegXCalculatorTestCase.cs" />
